--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
     "next": "^15.5.2",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
@@ -48,6 +48,7 @@
     "cookie": ">=0.7.0"
   },
   "overrides": {
-    "cookie": ">=0.7.0"
+    "cookie": ">=0.7.0",
+    "tar": ">=7.5.2"
   }
 }
